// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`jsx-vue-directive > vue 2.7 v-slot > ./fixtures/v-slot/index.vue 1`] = `
"<script setup lang="tsx">
import { unref as __MACROS_unref } from "vue";
import Child from './child.vue'
import type { FunctionalComponent } from 'vue'

const Comp: FunctionalComponent<
  {},
  {},
  {
    default: (scope: { foo: string }) => any
  }
> = (props, { slots }) => {
  return (
    <Child scopedSlots={{...Object.fromEntries(Array.from(slots, (Slot, slotName) => ([[__MACROS_unref(slotName)], (scope) => <span>
        <Slot {...scope} />
      </span>,])))}}
      
    ></Child>
  )
}

let show = $ref<boolean | undefined>()
defineRender(() => (
  <div>
    <Child  scopedSlots={{'bottom': ({ foo }) => <span>
      {foo}
      <Child  scopedSlots={{'default': () => <span>default</span>,}}></Child>
    </span>,}}></Child>

    <Comp  scopedSlots={{'default': () => <span>default</span>,}}></Comp>
    <Child  scopedSlots={{'bottom': ({ foo }) => <span>{foo}</span>,}}></Child>

    <Comp  scopedSlots={{'default': () => <span> </span>,}} />
    <Child  scopedSlots={{'bottom': ({ foo }) => <span> </span>,}} />

    <Child scopedSlots={{...(show) ? {'title': ({ foo }) => <span>
        {show}
      </span>,} : (show === false) ? {'center': ({ foo }) => <span>
        {foo}
      </span>,} : {'bottom': () => <span> </span>,},'bot-tom': () => <span>bot-tom</span>,default: () => <span>
      default
      
      
      
      
    </span>}}></Child>
  </div>
))
</script>
"
`;

exports[`jsx-vue-directive > vue 3 v-slot > ./fixtures/v-slot/index.vue 1`] = `
"<script setup lang="tsx">
import { renderList as __MACROS_renderList } from "vue";
import { unref as __MACROS_unref } from "vue";
import Child from './child.vue'
import type { FunctionalComponent } from 'vue'

const Comp: FunctionalComponent<
  {},
  {},
  {
    default: (scope: { foo: string }) => any
  }
> = (props, { slots }) => {
  return (
    <Child v-slots={{...Object.fromEntries(__MACROS_renderList(slots, (Slot, slotName) => ([[__MACROS_unref(slotName)], (scope) => <>
        <Slot {...scope} />
      </>,])))}}
      
    ></Child>
  )
}

let show = $ref<boolean | undefined>()
defineRender(() => (
  <div>
    <Child  v-slots={{'bottom': ({ foo }) => <>
      {foo}
      <Child  v-slots={{'default': () => <>default</>,}}></Child>
    </>,}}></Child>

    <Comp  v-slots={{'default': () => <>default</>,}}></Comp>
    <Child  v-slots={{'bottom': ({ foo }) => <>{foo}</>,}}></Child>

    <Comp  v-slots={{'default': () => <> </>,}} />
    <Child  v-slots={{'bottom': ({ foo }) => <> </>,}} />

    <Child v-slots={{...(show) ? {'title': ({ foo }) => <>
        {show}
      </>,} : (show === false) ? {'center': ({ foo }) => <>
        {foo}
      </>,} : {'bottom': () => <> </>,},'bot-tom': () => <>bot-tom</>,default: () => <>
      default
      
      
      
      
    </>}}></Child>
  </div>
))
</script>
"
`;
